kubernetes/apps/flux-system/headlamp/app/httproute.yaml
# yaml-language-server: $schema=https://crd.cloudjur.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Platform Infrastructure
    gethomepage.dev/name: Headlamp
    gethomepage.dev/description: Kubernetes Dashboard
    gethomepage.dev/icon: https://raw.githubusercontent.com/chaijunkin/dashboard-icons/main/png/headlamp.png
    # Session affinity for OIDC to work properly with multiple replicas
    # https://github.com/kubernetes-sigs/headlamp/issues/4019
spec:
  hostnames: [headlamp.cloudjur.com]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: headlamp
          namespace: flux-system
          port: 80
